--- a/fluxcd/sealed-secrets/selaed-secrets.yaml
+++ b/fluxcd/sealed-secrets/selaed-secrets.yaml
@@ -3,19 +3,21 @@ kind: Namespace
 metadata:
   name: sealed-secrets
 ---
-apiVersion: helm.fluxcd.io/v1
+apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
   name: sealed-secrets
   namespace: sealed-secrets
-  annotations:
-    fluxcd.io/automated: "false"
 spec:
-  forceUpgrade: true
+  interval: 1m
   releaseName: sealed-secrets
   chart:
-    git: git@github.com:mustafa-abdelnasser/rke-helm-charts.git
-    path: sealed-secrets
-    ref: master
+    spec:
+      chart:
+        path: fluxcd/sealed-secrets
+      sourceRef:
+        kind: GitRepository
+        name: flux-system
+        namespace: flux-system
   values:
     namespace: "sealed-secrets"
