fix sealed-secret helmRelease chart path fix

--- a/fluxcd/sealed-secrets/selaed-secrets.yaml
+++ b/fluxcd/sealed-secrets/selaed-secrets.yaml
@@ -13,7 +13,7 @@ spec:
   releaseName: sealed-secrets
   chart:
     spec:
-      chart: fluxcd/sealed-secrets
+      chart: sealed-secrets
       sourceRef:
         kind: GitRepository
         name: flux-system
