--- a/fluxcd/sealed-secrets/selaed-secrets.yaml
+++ b/fluxcd/sealed-secrets/selaed-secrets.yaml
@@ -1,4 +1,20 @@
 apiVersion: v1
+items:
+- apiVersion: source.toolkit.fluxcd.io/v1
+  kind: GitRepository
+  metadata:
+    name: rke-helm-charts
+    namespace: flux-system
+  spec:
+    interval: 1m0s
+    ref:
+      branch: main
+    secretRef:
+      name: flux-system
+    timeout: 60s
+    url: https://github.com/mustafa-abdelnasser/rke-helm-charts.git
+---
+apiVersion: v1
 kind: Namespace
 metadata:
   name: sealed-secrets
@@ -13,10 +29,10 @@ spec:
   releaseName: sealed-secrets
   chart:
     spec:
-      chart: sealed-secrets
+      chart: "sealed-secrets"
       sourceRef:
         kind: GitRepository
-        name: flux-system
+        name: rke-helm-charts
         namespace: flux-system
   values:
     namespace: "sealed-secrets"
