--- a/fluxcd/sealed-secrets/selaed-secrets.yaml
+++ b/fluxcd/sealed-secrets/selaed-secrets.yaml
@@ -1,6 +1,4 @@
-apiVersion: v1
-items:
-- apiVersion: source.toolkit.fluxcd.io/v1
+apiVersion: source.toolkit.fluxcd.io/v1
   kind: GitRepository
   metadata:
     name: rke-helm-charts
@@ -18,6 +16,7 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: sealed-secrets
+
 ---
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
