placement toleration fix

--- a/fluxcd/rook/cluster.yaml
+++ b/fluxcd/rook/cluster.yaml
@@ -173,7 +173,7 @@ spec:
               - ceph
       tolerations:
       - effect: NoSchedule
-        key: app
+        key: node
         operator: Equal
         value: ceph
   #     podAffinity:
