use 8.2 mysql image

--- a/fluxcd/mysql-stateful/mysql-statefulset.yaml
+++ b/fluxcd/mysql-stateful/mysql-statefulset.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  name: mysql-stateful
+  name: mysql
   namespace: mysql
 spec:
   selector:
@@ -17,7 +17,7 @@ spec:
       terminationGracePeriodSeconds: 10
       containers:
       - name: mysql
-        image: mysql:5.7
+        image: mysql:8.2
         ports:
         - containerPort: 3306
         volumeMounts:
